# lance-duckdb

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  pyproject.toml  vcpkg.json
.github/workflows/: Build.yml  CodeQuality.yml  Distribution.yml  MainDistributionPipeline.yml
cpp/: lance_copy.cpp  lance_extension.cpp  lance_scan.cpp
include/: lance_extension.hpp
rust/: constants.rs  error.rs  filter_ir.rs  lib.rs  runtime.rs  scanner.rs
rust/ffi/: arrow_export.rs  dataset.rs  dir_namespace.rs  index.rs  knn.rs  mod.rs  namespace.rs  projection.rs  scan.rs  schema_evolution.rs  search.rs  stream.rs  types.rs  update.rs  util.rs  write.rs
scripts/: configure_ci.sh  protoc_wrapper.cmd  protoc_wrapper.sh
src/: lance_common.cpp  lance_delete.cpp  lance_extension.cpp  lance_filter_ir.cpp  lance_fts.cpp  lance_index.cpp  lance_insert.cpp  lance_knn.cpp  lance_metadata.cpp  lance_replacement.cpp  lance_scan.cpp  lance_search.cpp  lance_storage.cpp  lance_truncate.cpp  lance_update.cpp  lance_write.cpp
src/include/: lance_common.hpp  lance_delete.hpp  lance_extension.hpp  lance_ffi.hpp  lance_filter_ir.hpp  lance_insert.hpp  lance_scan_bind_data.hpp  lance_table_entry.hpp  lance_update.hpp
test/bigann_tiny/: GENERATION.md  metadata.json
test/bigann_tiny/base.lance/_transactions/: 0-1e02fbcc-fe1c-4b4f-b7fd-313bc034d694.txn  1-1c5a7335-dd59-4e74-a5a1-c78ea8b8f959.txn
test/bigann_tiny/groundtruth_all_top10.lance/_transactions/: 0-4e3b981b-75f2-4f60-8d03-7054571d0bab.txn
test/bigann_tiny/groundtruth_all_top10.lance/_versions/: 1.manifest
test/bigann_tiny/groundtruth_label1_top10.lance/_transactions/: 0-9c3b1e1b-3cf6-4f03-a4de-c207f0edd889.txn
test/bigann_tiny/queries.lance/_versions/: 1.manifest
test/data/bigann_tiny/: GENERATION.md
test/data/bigann_tiny/base.lance/_indices/b6bcd0da-c1e7-409a-b363-79b72dc872b3/: auxiliary.idx  index.idx
test/data/bigann_tiny/base.lance/_versions/: 1.manifest  2.manifest
test/data/bigann_tiny/groundtruth_label1_top10.lance/_versions/: 1.manifest
test/data/bigann_tiny/queries.lance/_transactions/: 0-7946d877-b379-46b1-91b1-e83116a0589b.txn
test/data/search_test_data.lance/_indices/b8c3c555-9788-4ba8-acd2-2b406b43e370/: part_0_docs.lance  part_0_invert.lance
test/data/search_test_data.lance/_transactions/: 2-fae71aab-15d3-4183-8a05-5cd194acfb4b.txn
test/data/search_test_data.lance/_versions/: 1.manifest  2.manifest  3.manifest
test/data/tpch_sf0_01/customer.lance/_transactions/: 0-5ead4afd-84f6-4de1-86e9-af428288934a.txn
test/data/tpch_sf0_01/nation.lance/_transactions/: 0-da2b98d4-0a78-478b-9ed8-53b3541c0256.txn
test/data/tpch_sf0_01/orders.lance/_transactions/: 0-678d7ced-78fa-4553-aa0b-4cd66a79d7e9.txn
test/data/tpch_sf0_01/part.lance/_transactions/: 0-fbae7f1a-d046-4b24-b6b1-2be9bee64cdd.txn
test/data/tpch_sf0_01/partsupp.lance/_transactions/: 0-191572b7-b0cc-4e27-9d05-2665f4355e57.txn
test/data/tpch_sf0_01/region.lance/_transactions/: 0-be1876f5-a1ee-4f9c-9678-b602928c6e1e.txn
test/data/tpch_sf0_01/supplier.lance/_transactions/: 0-e27528d7-a7eb-435e-ad28-bdba31d9fb27.txn
test/data/tpch_sf0_01/supplier.lance/_versions/: 1.manifest
test/search_test_data.lance/_indices/9ccf5fc9-00b2-40b0-9328-61877d9ebcf6/: part_0_docs.lance  part_0_invert.lance  part_0_tokens.lance
test/search_test_data.lance/_indices/b8c3c555-9788-4ba8-acd2-2b406b43e370/: metadata.lance  part_0_tokens.lance
test/search_test_data.lance/_transactions/: 0-6a0f01d1-ee3e-4a54-afbb-2dda0b1300cb.txn  1-c83907aa-9a63-4367-bc48-59e94baeab7c.txn
test/sql/: alter_table_schema_evolution.test  attach_namespace.test  attach_namespace_create_table.test  attach_namespace_dynamic_discovery.test  bigann_tiny.test  drop_table.test  drop_table_s3_minio.test  filter_ir_types.test  index_ddl.test  knn.test  lance.test  lance_delete.test  lance_insert.test  lance_namespace_rest.test  lance_query.test  lance_s3_minio.test  lance_search.test  lance_update.test  lance_write.test  lance_write_s3_minio.test  search.test  tpch.test  truncate_table.test
test/tpch_sf0_01/customer.lance/_versions/: 1.manifest
test/tpch_sf0_01/lineitem.lance/_transactions/: 0-51af55a7-5c75-4cef-99c1-4363b6de55b4.txn
test/tpch_sf0_01/lineitem.lance/_versions/: 1.manifest
test/tpch_sf0_01/nation.lance/_versions/: 1.manifest
test/tpch_sf0_01/orders.lance/_versions/: 1.manifest
test/tpch_sf0_01/part.lance/_versions/: 1.manifest
test/tpch_sf0_01/partsupp.lance/_versions/: 1.manifest
test/tpch_sf0_01/region.lance/_versions/: 1.manifest
