[package]
name = "lance_duckdb_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "lance_duckdb_ffi"
crate-type = ["staticlib"]
path = "rust/lib.rs"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[dependencies]

# Lance and Arrow dependencies - using compatible versions
lance = "1.0.0"
arrow = { version = "56.2.0", features = ["ffi"] }
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
