[package]
name = "lance_duckdb_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "lance_duckdb_ffi"
crate-type = ["staticlib"]
path = "rust/lib.rs"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]

# Lance and Arrow dependencies - using compatible versions
lance = { version = "1.0.0", default-features = false, features = ["aws", "azure", "gcp", "oss", "huggingface"] }
arrow = { version = "56.2.0", features = ["ffi"] }
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
bzip2-sys = { version = "0.1.13", features = ["static"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
datafusion-common = "50.3.0"
datafusion-expr = "50.3.0"
datafusion-functions = "50.3.0"
lance-index = "1.0.0"
