[project]
name = "lance-duckdb-devtools"
version = "0.1.0"
description = "Developer tooling for DuckDB format.py"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
format = [
    "black==24.*",
    "clang-format==11.0.1",
    "cmake-format==0.6.13",
    "cxxheaderparser>=1.6.2",
    "pcpp>=1.30",
]

[tool.uv]
default-groups = ["format"]
